<resources>
    <string name="app_name">APPChat</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_chats">Chats</string>
    <string name="tv_Titulo">Titulo</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="txtLogin">Login</string>
    <string name="emailLogin">Email</string>
    <string name="password">Password</string>
    <string name="bt_ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">Tienes Cuenta?</string>
    <string name="txt_view_registrar">Registrarse</string>
    <string name="txt_registro">Registro</string>
    <string name="txt_nombre">Nombre</string>
    <string name="Password">Password</string>
    <string name="RepetirPassword">Repeat password</string>
    <string name="bt_registrarse">Registrar</string>
    <string name="txt_cerrarSesion">Cerrar Sesion</string>
    <string name="default_web_cliente_id">657999959940-1ho189iedie8cutt29n8e67rrtgb36os.apps.googleusercontent.com</string>
    <string name="txt_Nombre">Nombre: </string>
    <string name="tv_nombre"> -- </string>
    <string name="txt_Email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_Proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_Registro">Miembre desde: </string>
    <string name="tv_registro"> -- </string>
    <string name="txt_titulo_edit">Editar Informacion</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="bt_actualizar_info">Actualizar</string>
    <string name="tv_recuperar_cuenta"> Olvidaste la contrasenha? <b>Recuperar</b></string>
    <string name="txt_olvide_pass">Olvide contrasenha</string>
    <string name="txt_ingrese_email">Ingrese email para el envio de las instrucciones de recuperacion</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_cambiar_pass">Cambiar contrasenha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_cmabiar_pass">Cambiar contrasenha</string>
    <string name="txt_contrasenha_actual">Constrasenha Actual</string>
    <string name="txt_contrasenha_nueva">Constrasenha Nueva</string>
    <string name="txt_contrasenha_repetir">Repetir contrasenha</string>
    <string name="btn_cambiar">Cambiar</string>
    <string name="item_uid">UID Usuario</string>
    <string name="item_nombre">Nombre Usuario</string>
    <string name="item_email">Email Usuario</string>
    <string name="txt_buscar_usuario">Buscar usuario</string>
    <string name="txt_nombres">Nombres</string>
    <string name="mensaje_chat">Escriba algo</string>
    <string name="tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>
    <string name="etBuscar">Buscar</string>
    <string name="tvFecha">dd/MM/yyyy</string>

</resources>