<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginEmailActivity">

    <TextView
        android:text="@string/txtLogin"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <ImageView
        android:src="@drawable/icon_perfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp">
    </ImageView>

    <!--EMAIL-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/emailL"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/tv_recuperar_cuenta"
        android:id="@+id/tv_recuperar_cuenta">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ingresar"
        android:text="@string/bt_ingresar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:text="@string/no_tienes_cuenta"
        android:textSize="15sp"
        android:layout_marginTop="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/txt_view_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/txt_view_registrar"
        android:textAllCaps="true">
    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>