<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroEmailActivity">

    <TextView
        android:text="@string/txt_registro"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <ImageView
        android:src="@drawable/icon_registrarse"
        android:layout_width="100dp"
        android:layout_height="100dp">

    </ImageView>
    
    <!-- NOMBRE -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/nombre"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- CORREO -->
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/emailRegistro"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONTRASE;A -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordRegistro"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- REPETIR CONTRASE;A -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/repeatPassword"
            android:hint="@string/RepetirPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_registrar"
        android:text="@string/bt_registrarse"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </com.google.android.material.button.MaterialButton>

</androidx.appcompat.widget.LinearLayoutCompat>