<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OlvidasteContrasenha">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_regresar"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:id="@+id/Ibregresar">

        </ImageButton>

        <TextView
            android:id="@+id/txt_olvide_pass"
            android:text="@string/txt_olvide_pass"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        
        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </View>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IconPassword"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_contrasenha"
            android:layout_centerHorizontal="true">
        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/txt_ingrese_email"
            android:text="@string/txt_ingrese_email"
            android:layout_below="@+id/IconPassword"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILEmail"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_below="@+id/txt_ingrese_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_Email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enviar"
            android:text="@string/btn_enviar"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>

</RelativeLayout>