<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarPassword">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/Ibregresar"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_regresar"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ImageButton>

        <TextView
            android:textSize="16sp"
            android:id="@+id/txt_cambiar_pass"
            android:text="@string/btn_cambiar_pass"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </View>


    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILpasswordActual"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/txt_contrasenha_actual">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILPasswordNueva"
            android:layout_below="@+id/TILpasswordActual"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_nuevo"
                android:inputType="textPassword"
                android:hint="@string/txt_contrasenha_nueva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILPasswordRepetriContra"
            android:layout_below="@+id/TILPasswordNueva"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_repetir_contrasenha"
                android:hint="@string/txt_contrasenha_repetir"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cambiar"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            android:id="@+id/btn_CambiarPassword"
            app:cornerRadius="8dp">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>



</RelativeLayout>