<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarInformacion"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/toolbarRl">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_regresar"
            android:id="@+id/Ibregresar">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_titulo_edit"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/txt_titulo_edit">
        </TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_alignParentBottom="true">

        </View>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/perfilRL">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivPerfil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_img_perfil">

                </de.hdodenhof.circleimageview.CircleImageView>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_editar"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/IvEditarPerfil">

                </ImageView>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/perfilRL"
                android:layout_marginTop="10dp"
                android:id="@+id/TILNombre"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nombre"
                    android:hint="@string/txt_nombre"
                    android:inputType="textPersonName|textCapWords"
                    >

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TILNombre"
                android:textAllCaps="true"
                android:text="@string/bt_actualizar"
                app:cornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:id="@+id/bt_actualizar">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>